Add option to use KCal instead of KCalCore, to work with KDEPIM 4.4.x

The option is enabled by default.

BUG: 267396