resource/facebookresource.cpp
@@ -37,6 +37,7 @@ using namespace Akonadi;
 
 static const char * friendsRID = "friends";
 static const char * eventsRID = "events";
+static const char * eventMimeType = "application/x-vnd.akonadi.calendar.event";
 
 FacebookResource::FacebookResource( const QString &id )
     : ResourceBase( id )
@@ -274,8 +275,8 @@ void FacebookResource::detailedEventListJobFinished( KJob* job )
     foreach ( const EventInfoPtr &eventInfo, eventJob->eventInfo() ) {
       Item event;
       event.setRemoteId( eventInfo->id() );
-      event.setPayload<KCalCore::Incidence::Ptr>( eventInfo->asEvent() );
-      event.setMimeType( eventInfo->asEvent()->mimeType() );
+      event.setPayload<IncidencePtr>( eventInfo->asEvent() );
+      event.setMimeType( eventMimeType );
       eventItems.append( event );
     }
     itemsRetrieved( eventItems );
@@ -419,7 +420,7 @@ void FacebookResource::retrieveCollections()
   events.setRemoteId( eventsRID );
   events.setName( i18n( "Events" ) );
   events.setParentCollection( Akonadi::Collection::root() );
-  events.setContentMimeTypes( QStringList() << "text/calendar" << KCalCore::Event::eventMimeType() );
+  events.setContentMimeTypes( QStringList() << "text/calendar" << eventMimeType );
   events.setRights( Collection::ReadOnly );
   EntityDisplayAttribute * const evendDisplayAttribute = new EntityDisplayAttribute();
   evendDisplayAttribute->setIconName( "facebookresource" );
